# CyberSiren

./: .gitattributes  .gitignore  CHANGELOG.md  FIREBASE_SETUP.md  GOOGLE_PLAY.md  PRIVACY_POLICY.md  README.md  build.gradle.kts  generate_icons.py  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
docs/: ANNOUNCEMENT_GOSSIP.md  SOURCE_ROUTING.md  file_transfer.md  firebase_json_structure.md  mesh_binary_protocol.md  sync.md
gradle/: libs.versions.toml
ios/bitchat/: .gitignore  Justfile  Package.swift  README.md
ios/bitchat/Configs/: Local.xcconfig.example  Release.xcconfig
ios/bitchat/bitchat/: BitchatApp.swift  Info.plist  Localizable.xcstrings  bitchat-macOS.entitlements  bitchat.entitlements
ios/bitchat/bitchat.xcodeproj/: project.pbxproj
ios/bitchat/bitchatShareExtension/: Info.plist  ShareViewController.swift  bitchatShareExtension.entitlements
ios/bitchat/bitchatTests/: BLEServiceCoreTests.swift  BLEServiceTests.swift  BitchatPeerTests.swift  ChatViewModelDeliveryStatusTests.swift  ChatViewModelExtensionsTests.swift  ChatViewModelRefactoringTests.swift  ChatViewModelTests.swift  ChatViewModelTorTests.swift  CommandProcessorTests.swift  FontBitchatTests.swift  GCSFilterTests.swift  GeohashBookmarksStoreTests.swift  GeohashParticipantTrackerTests.swift  GeohashPresenceTests.swift  GossipSyncManagerTests.swift  InputValidatorTests.swift  (+17 more)
ios/bitchat/localPackages/Arti/arti-bitchat/: Cargo.toml  cbindgen.toml
ios/bitchat/localPackages/Arti/arti-bitchat/src/: lib.rs  socks.rs
tools/arti-build/: ARTI_VERSION  Cargo.toml  README.md  build-arti.sh
tools/arti-build/src/: lib.rs
wear/: build.gradle.kts
(+557 files in other folders)
